BUG#36933, BUG#34480, BUG#33567 (Backup: snapshot error + crash if double backup)

Before: When user specified the same database twice in the BACKUP DATABASE 
statement, it was included twice in the backup image. This lead to a host 
of problems.

After: 

1. Parser reports error if the same database repeated twice in the list (similar 
as for other SQL statements, e.g., DROP TABLE).

2. Backup kernel code will ignore duplicates in the database list (if they ever
get there) and never try to backup the same database twice.